--- a/css/custom.css
+++ b/css/custom.css
@@ -215,3 +215,31 @@ a:hover, a:active {
     text-align: center;
     width: 70px;
 }
+
+
+.flexy {
+    width: 30%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.badge {
+    background-color: #6bb9f0;
+    padding: .5rem .5rem;
+    margin: .3rem;
+    border-radius: 5px;
+    color: #ffffff;
+    -moz-user-select: none;
+    user-select: none;
+    box-shadow: 0 5px 0 0 #3da3eb;
+    transition: .1s;
+    font-size:14px;
+}
+.badge p{margin: 0px;
+color: #ffffff;}
+.badge:active {
+    transform: translatey(4px);
+    box-shadow: 0 1px 0 0 #3da3eb;
+}
